Source/Alternet.UI.Pal/Api/Control.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API void Control_Lower_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->Lower();
    });
}
ALTERNET_UI_API void Control_SetAllowDoubleBuffered_(Control* obj, c_bool allow)
{
    MarshalExceptions<void>([&](){
        obj->SetAllowDoubleBuffered(allow);
    });
}
ALTERNET_UI_API void Control_DisableRecreate_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->DisableRecreate();
    });
}
ALTERNET_UI_API void Control_EnableRecreate_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->EnableRecreate();
    });
}
ALTERNET_UI_API void Control_UnsetToolTip_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->UnsetToolTip();
    });
}
ALTERNET_UI_API c_bool Control_IsTransparentBackgroundSupported_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsTransparentBackgroundSupported();
    });
}
ALTERNET_UI_API c_bool Control_SetBackgroundStyle_(Control* obj, int style)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->SetBackgroundStyle(style);
    });
}
ALTERNET_UI_API int Control_GetBackgroundStyle_(Control* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetBackgroundStyle();
    });
}
ALTERNET_UI_API Color_C Control_GetDefaultAttributesBgColor_(Control* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetDefaultAttributesBgColor();
    });
}
ALTERNET_UI_API Color_C Control_GetDefaultAttributesFgColor_(Control* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetDefaultAttributesFgColor();
    });
}
ALTERNET_UI_API Font* Control_GetDefaultAttributesFont_(Control* obj)
{
    return MarshalExceptions<Font*>([&](){
        return obj->GetDefaultAttributesFont();
    });
}
ALTERNET_UI_API Color_C Control_GetClassDefaultAttributesBgColor_(int controlType, int windowVariant)
{
    return MarshalExceptions<Color_C>([&](){
        return Control::GetClassDefaultAttributesBgColor(controlType, windowVariant);
    });
}
ALTERNET_UI_API Color_C Control_GetClassDefaultAttributesFgColor_(int controlType, int windowVariant)
{
    return MarshalExceptions<Color_C>([&](){
        return Control::GetClassDefaultAttributesFgColor(controlType, windowVariant);
    });
}
ALTERNET_UI_API Font* Control_GetClassDefaultAttributesFont_(int controlType, int windowVariant)
{
    return MarshalExceptions<Font*>([&](){
        return Control::GetClassDefaultAttributesFont(controlType, windowVariant);
    });
}
ALTERNET_UI_API int Control_DrawingFromDip_(float value, void* window)
{
    return MarshalExceptions<int>([&](){
        return Control::DrawingFromDip(value, window);
    });
}
ALTERNET_UI_API float Control_DrawingDPIScaleFactor_(void* window)
{
    return MarshalExceptions<float>([&](){
        return Control::DrawingDPIScaleFactor(window);
    });
}
ALTERNET_UI_API float Control_DrawingToDip_(int value, void* window)
{
    return MarshalExceptions<float>([&](){
        return Control::DrawingToDip(value, window);
    });
}
ALTERNET_UI_API float Control_DrawingFromDipF_(float value, void* window)
{
    return MarshalExceptions<float>([&](){
        return Control::DrawingFromDipF(value, window);
    });
}
ALTERNET_UI_API void Control_SetCursor_(Control* obj, void* handle)
{
    MarshalExceptions<void>([&](){
        obj->SetCursor(handle);
    });
}
ALTERNET_UI_API Control* Control_HitTest_(PointD screenPoint)
{
    return MarshalExceptions<Control*>([&](){
        return Control::HitTest(screenPoint);
    });
}
ALTERNET_UI_API Control* Control_GetFocusedControl_()
{
    return MarshalExceptions<Control*>([&](){
        return Control::GetFocusedControl();
    });
}
ALTERNET_UI_API void Control_NotifyCaptureLost_()
{
    MarshalExceptions<void>([&](){
        Control::NotifyCaptureLost();
    });
}
ALTERNET_UI_API void Control_Freeze_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->Freeze();
    });
}
ALTERNET_UI_API void Control_Thaw_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->Thaw();
    });
}
ALTERNET_UI_API void Control_BeginIgnoreRecreate_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->BeginIgnoreRecreate();
    });
}
ALTERNET_UI_API void Control_EndIgnoreRecreate_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->EndIgnoreRecreate();
    });
}
ALTERNET_UI_API SizeD_C Control_GetDPI_(Control* obj)
{
    return MarshalExceptions<SizeD_C>([&](){
        return obj->GetDPI();
    });
}
ALTERNET_UI_API void Control_SetMouseCapture_(Control* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetMouseCapture(value);
    });
}
ALTERNET_UI_API void Control_AddChild_(Control* obj, Control* control)
{
    MarshalExceptions<void>([&](){
        obj->AddChild(control);
    });
}
ALTERNET_UI_API void Control_RemoveChild_(Control* obj, Control* control)
{
    MarshalExceptions<void>([&](){
        obj->RemoveChild(control);
    });
}
ALTERNET_UI_API void Control_Invalidate_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->Invalidate();
    });
}
ALTERNET_UI_API void Control_Update_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->Update();
    });
}
ALTERNET_UI_API void Control_InvalidateBestSize_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->InvalidateBestSize();
    });
}
ALTERNET_UI_API SizeD_C Control_GetPreferredSize_(Control* obj, SizeD availableSize)
{
    return MarshalExceptions<SizeD_C>([&](){
        return obj->GetPreferredSize(availableSize);
    });
}
ALTERNET_UI_API void Control_SetFocusFlags_(Control* obj, c_bool canSelect, c_bool tabStop, c_bool acceptsFocusRecursively)
{
    MarshalExceptions<void>([&](){
        obj->SetFocusFlags(canSelect, tabStop, acceptsFocusRecursively);
    });
}
ALTERNET_UI_API DragDropEffects Control_DoDragDrop_(Control* obj, UnmanagedDataObject* data, DragDropEffects allowedEffects)
{
    return MarshalExceptions<DragDropEffects>([&](){
        return obj->DoDragDrop(data, allowedEffects);
    });
}
ALTERNET_UI_API DrawingContext* Control_OpenPaintDrawingContext_(Control* obj)
{
    return MarshalExceptions<DrawingContext*>([&](){
        return obj->OpenPaintDrawingContext();
    });
}
ALTERNET_UI_API DrawingContext* Control_OpenClientDrawingContext_(Control* obj)
{
    return MarshalExceptions<DrawingContext*>([&](){
        return obj->OpenClientDrawingContext();
    });
}
ALTERNET_UI_API void Control_BeginUpdate_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->BeginUpdate();
    });
}
ALTERNET_UI_API void Control_EndUpdate_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->EndUpdate();
    });
}
ALTERNET_UI_API void Control_RecreateWindow_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->RecreateWindow();
    });
}
ALTERNET_UI_API void Control_ResetBackgroundColor_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->ResetBackgroundColor();
    });
}
ALTERNET_UI_API void Control_ResetForegroundColor_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->ResetForegroundColor();
    });
}
ALTERNET_UI_API PointD_C Control_ClientToScreen_(Control* obj, PointD point)
{
    return MarshalExceptions<PointD_C>([&](){
        return obj->ClientToScreen(point);
    });
}
ALTERNET_UI_API PointD_C Control_ScreenToClient_(Control* obj, PointD point)
{
    return MarshalExceptions<PointD_C>([&](){
        return obj->ScreenToClient(point);
    });
}
ALTERNET_UI_API PointI_C Control_ScreenToDevice_(Control* obj, PointD point)
{
    return MarshalExceptions<PointI_C>([&](){
        return obj->ScreenToDevice(point);
    });
}
ALTERNET_UI_API PointD_C Control_DeviceToScreen_(Control* obj, PointI point)
{
    return MarshalExceptions<PointD_C>([&](){
        return obj->DeviceToScreen(point);
    });
}
ALTERNET_UI_API c_bool Control_SetFocus_(Control* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->SetFocus();
    });
}
ALTERNET_UI_API void Control_FocusNextControl_(Control* obj, c_bool forward, c_bool nested)
{
    MarshalExceptions<void>([&](){
        obj->FocusNextControl(forward, nested);
    });
}
ALTERNET_UI_API void Control_BeginInit_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->BeginInit();
    });
}
ALTERNET_UI_API void Control_EndInit_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->EndInit();
    });
}
ALTERNET_UI_API void Control_Destroy_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->Destroy();
    });
}
ALTERNET_UI_API void Control_SaveScreenshot_(Control* obj, const char16_t* fileName)
{
    MarshalExceptions<void>([&](){
        obj->SaveScreenshot(fileName);
    });
}
ALTERNET_UI_API void Control_SendSizeEvent_(Control* obj)
{
    MarshalExceptions<void>([&](){
        obj->SendSizeEvent();
    });
}
ALTERNET_UI_API void Control_SendMouseDownEvent_(Control* obj, int x, int y)
{
    MarshalExceptions<void>([&](){
        obj->SendMouseDownEvent(x, y);
    });
}
ALTERNET_UI_API void Control_SendMouseUpEvent_(Control* obj, int x, int y)
{
    MarshalExceptions<void>([&](){
        obj->SendMouseUpEvent(x, y);
    });
}
ALTERNET_UI_API void Control_SetBoundsEx_(Control* obj, RectD rect, int flags)
{
    MarshalExceptions<void>([&](){
        obj->SetBoundsEx(rect, flags);
    });
}
ALTERNET_UI_API void* Control_GetContainingSizer_(Control* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetContainingSizer();
    });
}
ALTERNET_UI_API void* Control_GetSizer_(Control* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetSizer();
    });
}
ALTERNET_UI_API void Control_SetSizer_(Control* obj, void* sizer, c_bool deleteOld)
{
    MarshalExceptions<void>([&](){
        obj->SetSizer(sizer, deleteOld);
    });
}
ALTERNET_UI_API void Control_SetSizerAndFit_(Control* obj, void* sizer, c_bool deleteOld)
{
    MarshalExceptions<void>([&](){
        obj->SetSizerAndFit(sizer, deleteOld);
    });
}
ALTERNET_UI_API int Control_GetScrollBarEvtKind_(Control* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetScrollBarEvtKind();
    });
}